--- a/telalogin.html
+++ b/telalogin.html
@@ -4,19 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styleslogin.css">
     <title>Login</title>
 </head>
 <body>
     <div class="slider-thumb">
         <section class="login">
-            <h1>Area de Login</h1>
-            <input type="text" placeholder="Login" id="usernameinput">
-            <br><br>
-            <input type="password" placeholder="Senha" id="passwordinput">
+            <h1>Entre com sua conta</h1>
+            <input type="password" placeholder="Digite sua Senha" id="passwordinput">
             <br><br>
             <button onclick="login()">Entrar</button>
-            <p id="status"></p>
+            <button onclick="voltar()">Voltar</button>
+            <div id="status"></div>
         </section>
     </div>
     <script src="script.js"></script>
