--- a/jogar.html
+++ b/jogar.html
@@ -15,7 +15,7 @@
 <body class="sala-masmorra">
     <main id="selecionador">
         <nav class="voltar">
-            <a href="index.html"><div class="volta">↩</div></a> 
+            <a href="lobby.html"><div class="volta">↩</div></a> 
         </nav>
         <h1 class="texto">Selecione seu oponente</h1>
         <a href="batalha.html" id="link-oponente">
