--- a/sobre-nos.html
+++ b/sobre-nos.html
@@ -15,7 +15,7 @@
 <body id="background-sobre-nos">
     <main id="sobre-nos">
         <nav>
-            <a href="index.html"><div class="volta">↩</div></a> 
+            <a href="lobby.html"><div class="volta">↩</div></a> 
         </nav>
 
         <h1>Agradecimentos especiais à:</h1>
