--- a/shop.html
+++ b/shop.html
@@ -24,7 +24,7 @@
             <p id="gemas-player">💎0</p>
         </div>
         <img src="img/carrinho-de-compras.png" class="imagem-loja" id="carrinho" draggable="false">
-        <p id="text-shop">Re rolar</p>
+        <p id="text-shop">Re-rolar: -20💎</p>
         <img src="img/setas-circulares.png" class="imagem-loja" id="reciclar" draggable="false">
         <section id="loja-cartas">
             <div class="carta-venda" id="comprar-um">
