--- a/sobre-nos.html
+++ b/sobre-nos.html
@@ -15,12 +15,12 @@
 <body id="background-sobre-nos">
     <main id="sobre-nos">
         <nav>
-            <a href="lobby.html"><div class="volta">↩</div></a> 
+            <a href="index.html"><div class="volta">↩</div></a> 
         </nav>
 
         <h1>Agradecimentos especiais à:</h1>
-            <h2 class="numeracao">Arthur Rodrigues Nepomucenos Milagres(o mais gay :))</h2>
-                <p> Ele tem 16 anos, atualmente mora em BH, e cursa Informática no Cefet-Mg, gosta de jogar Overwatch e LOL(o jogo mais odiado da internet), é o principal na criação desse site, desde a criação do sistema do jogo, design das cartas e do campo de batalha, coordenando as instruções e auxiliando seus companheiros.
+            <h2 class="numeracao" id="easter-egg">Arthur Rodrigues Nepomucenos Milagres(o mais gay :))</h2>
+            <p> Ele tem 16 anos, atualmente mora em BH, e cursa Informática no Cefet-Mg, gosta de jogar Overwatch e LOL(o jogo mais odiado da internet), é o principal na criação desse site, desde a criação do sistema do jogo, design das cartas e do campo de batalha, coordenando as instruções e auxiliando seus companheiros.
                 </p>
             
             <h2 class="numeracao">Bruno Ferreira da Silva</h2>
@@ -28,10 +28,12 @@
 
                 </p>
                 </p>    
+            <h2 class="numeracao">Daniel Ferraz</h2>    
                 <p>The standard Lorem Ipsum passage, used since the 1500s
                     "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
                 </p>
 
+                <p>Aqui vos deixo as referências utilizadas para, com o site ;)</p> <a id="especial" href="referencias.html">Referências</a> 
     </main>            
     <script src="easterEgg.js"></script>
 </body>
