--- a/referencias.html
+++ b/referencias.html
@@ -4,15 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
     <title>Referências</title>
 </head>
-<body class="referencias">
-    <a href="https://1.bp.blogspot.com/-rVDB5KiLNgY/UqjOI74s7pI/AAAAAAAAGoA/ba0rwPGRe28/s1600/dungeon+(1).jpg"></a></p>
-    <a href="https://www.wallpaperflare.com/brown-wooden-framed-glass-top-table-fantasy-art-pointed-ears-wallpaper-tmspd"></a></p>
-    <a href="https://www.wallpaperflare.com/candle-fantasy-art-book-coins-tavern-based-bard-wallpaper-tnvlf"></a></p>
-    <a href="https://www.wallpaperflare.com/sheep-heads-card-game-bavaria-bavarian-table-schafkopf-card-wallpaper-ulkhp"></a></p>
-    <a href="https://www.flaticon.com/br/icones-gratis/espada" title="espada ícones">Espada ícones criados por Ken111 - Flaticon</a>
-    <a href="https://www.flaticon.com/br/icones-gratis/escudo" title="escudo ícones">Escudo ícones criados por Freepik - Flaticon</a>
-    <a href="https://game-icons.net/">MELHOR SITE DE TODOS SALVA VIDAS TE AMO (Lorc, Delapouite & contributors)</a>
+<body id="background-referencias">
+    <main id="referencias">
+        <nav>
+            <a href="sobre-nos.html"><div class="volta">↩</div></a> 
+        </nav>
+        <a href="https://1.bp.blogspot.com/-rVDB5KiLNgY/UqjOI74s7pI/AAAAAAAAGoA/ba0rwPGRe28/s1600/dungeon+(1).jpg">Background main por blogspot</a>
+        <a href="https://www.wallpaperflare.com/brown-wooden-framed-glass-top-table-fantasy-art-pointed-ears-wallpaper-tmspd">Background loja por Wallpaper Flare</a>
+        <a href="https://www.wallpaperflare.com/candle-fantasy-art-book-coins-tavern-based-bard-wallpaper-tnvlf">Background sobre nós por Wallpaper flare</a>
+        <a href="https://www.flaticon.com/br/icones-gratis/espada" title="espada ícones">Espada ícones criados por Ken111 - Flaticon</a>
+        <a href="https://www.flaticon.com/br/icones-gratis/escudo" title="escudo ícones">Escudo ícones criados por Freepik - Flaticon</a>
+        <a href="https://game-icons.net/">MELHOR SITE DE TODOS SALVA VIDAS TE AMO (Lorc, Delapouite & contributors)</a>
+        
+    </main>    
 </body>
 </html>
