--- a/batalha.html
+++ b/batalha.html
@@ -23,36 +23,36 @@
         <div id="area-inimigo">
             <div id="slot1" class="enemyslot">
                 <img draggable="false">
-                <p class="dmg"></p>
-                <p class="hp"></p>
+                <p class="dmg">⠀</p>
+                <p class="hp">⠀</p>
             </div>
             <div id="slot2" class="enemyslot">
                 <img draggable="false">
-                <p class="dmg"></p>
-                <p class="hp"></p>
+                <p class="dmg">⠀</p>
+                <p class="hp">⠀</p>
             </div>
             <div id="slot3" class="enemyslot">
                 <img draggable="false">
-                <p class="dmg"></p>
-                <p class="hp"></p>
+                <p class="dmg">⠀</p>
+                <p class="hp">⠀</p>
             </div>
         </div>
         <div id="area-aliado">
             <div id="slot4" class="slotabble">
                 <img draggable="false">
-                <p class="dmg"></p>
-                <p class="hp"></p>
+                <p class="dmg">⠀</p>
+                <p class="hp">⠀</p>
             </div>
 
             <div id="slot5" class="slotabble">
                 <img draggable="false">
-                <p class="dmg"></p>
-                <p class="hp"></p>
+                <p class="dmg">⠀</p>
+                <p class="hp">⠀</p>
             </div>
             <div id="slot6" class="slotabble">
                 <img draggable="false">
-                <p class="dmg"></p>
-                <p class="hp"></p>
+                <p class="dmg">⠀</p>
+                <p class="hp">⠀</p>
             </div>
         </div>
         <nav id="batalha-voltar">
