--- a/sobre-nos.html
+++ b/sobre-nos.html
@@ -29,8 +29,9 @@
                 </p>
                 </p>    
             <h2 class="numeracao">Daniel Ferraz</h2>    
-                <p>The standard Lorem Ipsum passage, used since the 1500s
-                    "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
+                <p>Ele tem 17 anos, mora em Contagem, cursa Redes de Computadores no Cefet-Mg, gosta de jogar Valorant e varios outros jogos, ama ir à academia e foi o resposável na criação da Tela de Cadastro/Login. Também ajudou na estilização do site e contribuiu na busca de melhorias do mesmo.
+
+                </p>
                 </p>
 
                 <p>Aqui vos deixo as referências utilizadas para, com o site ;)</p> <a id="especial" href="referencias.html">Referências</a> 
