--- a/deck.html
+++ b/deck.html
@@ -32,6 +32,8 @@
 
         </section>
     </main>
+    <audio src="audio/bandataverna-the-skeleton-dance-9c2510bc.mp3" autoplay loop="0"></audio>
+    <audio id="drag" src="audio/cardsound32562-37691.mp3"></audio>
     <script src="//cdn.rawgit.com/namuol/cheet.js/master/cheet.min.js" type="text/javascript"></script>
     <script src="deck.js"></script>
 </body>
