--- a/jogar.html
+++ b/jogar.html
@@ -25,6 +25,8 @@
         <button id="anterior" class="controle">⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀</button>
         <button id="proximo" class="controle">⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀</button>
     </main>
+    <audio src="audio/bandataverna-the-skeleton-dance-9c2510bc.mp3" autoplay loop="0"></audio>
+
     <script src="jogar.js"></script>
 </body>
 
