--- a/lobby.html
+++ b/lobby.html
@@ -23,6 +23,7 @@
             <button id="save-data">📩Voltar a tela de Login</button>
         </nav>
     </main>
+    <audio src="audio/bandataverna-libertas-qu-sera-tamen-5dc6b0e0.mp3" autoplay loop="0"></audio>
     <script src="index.js"></script>
     <script src="deck.js"></script>
 </body>
