--- a/referencias.html
+++ b/referencias.html
@@ -18,7 +18,19 @@
         <a href="https://www.flaticon.com/br/icones-gratis/espada" title="espada ícones">Espada ícones criados por Ken111 - Flaticon</a>
         <a href="https://www.flaticon.com/br/icones-gratis/escudo" title="escudo ícones">Escudo ícones criados por Freepik - Flaticon</a>
         <a href="https://game-icons.net/">MELHOR SITE DE TODOS SALVA VIDAS TE AMO (Lorc, Delapouite & contributors)</a>
-        
+        <a href="https://preview.redd.it/hxqilf0wkgm31.jpg?auto=webp&s=c6089f8d0793f9959556d8191a970b5a2d40de14"></a>
+            <a href="https://forums.terraria.org/index.php?threads%2Fterraria-desktop-wallpapers.12644%2F"></a></a>
+            <a href="https://ringtones.mob.org.pt/mp3/pirates_of_the_caribbean_original-22636/"></a>
+            <a href="https://www.palcomp3.com.br/bandataverna/libertas-qu-sera-tamen/"></a>Musica
+            Music by <a href="https://pixabay.com/pt/users/harumachimusic-13470593/?utm_source=link-attribution&amp;utm_medium=referral&amp;utm_campaign=music&amp;utm_content=112199">HarumachiMusic</a> from <a href="https://pixabay.com//?utm_source=link-attribution&amp;utm_medium=referral&amp;utm_campaign=music&amp;utm_content=112199">Pixabay</a>
+            <a href="https://media.words.la/download-yt.php?id=Zzo6L3wsf8c&title=Undertale%20OST:%20015%20-%20sans."></a>
+            <a href="https://mixkit.co/free-sound-effects/money/"></a>
+            Sound Effect from <a href="https://pixabay.com/sound-effects/?utm_source=link-attribution&amp;utm_medium=referral&amp;utm_campaign=music&amp;utm_content=99355">Pixabay</a>
+            Sound Effect from <a href="https://pixabay.com/sound-effects/?utm_source=link-attribution&amp;utm_medium=referral&amp;utm_campaign=music&amp;utm_content=37691">Pixabay</a>
+            Sound Effect from <a href="https://pixabay.com/sound-effects/?utm_source=link-attribution&amp;utm_medium=referral&amp;utm_campaign=music&amp;utm_content=91468">Pixabay</a>
+            <a src="https://www.palcomp3.com.br/bandataverna/the-skeleton-dance/"></a>
+            Sound Effect by <a href="https://pixabay.com/users/666herohero-25759907/?utm_source=link-attribution&amp;utm_medium=referral&amp;utm_campaign=music&amp;utm_content=21834">666HeroHero</a> from <a href="https://pixabay.com/sound-effects//?utm_source=link-attribution&amp;utm_medium=referral&amp;utm_campaign=music&amp;utm_content=21834">Pixabay</a>
+            <a>"hollow-knight-original-soundtrack"</a>
     </main>    
 </body>
 </html>
