--- a/shop.html
+++ b/shop.html
@@ -49,7 +49,10 @@
             </div>
         </section>
     </main>
+    <audio id="flip" src="audio/flipcard-91468.mp3"></audio>
+    <audio id="somCongelar" src="audio/Minecraft Glass Break - Sound Effect.mp3"></audio>
+    <audio id="somCompra" src="audio/mixkit-coins-handling-1939.wav"></audio>
+    <audio src="audio/Undertale OST_ 015 - sans. (320 kbps).mp3" autoplay loop="0"></audio>
     <script src="shop.js"></script>
 </body>
-
 </html>
