--- a/sobre-nos.html
+++ b/sobre-nos.html
@@ -19,7 +19,7 @@
         </nav>
 
         <h1>Agradecimentos especiais à:</h1>
-            <h2 class="numeracao" id="easter-egg">Arthur Rodrigues Nepomucenos Milagres(o mais gay :))</h2>
+            <h2 class="numeracao" id="easter-egg">Arthur Rodrigues Nepomucenos Milagres</h2>
             <p> Ele tem 16 anos, atualmente mora em BH, e cursa Informática no Cefet-Mg, gosta de jogar Overwatch e LOL(o jogo mais odiado da internet), é o principal na criação desse site, desde a criação do sistema do jogo, design das cartas e do campo de batalha, coordenando as instruções e auxiliando seus companheiros.
                 </p>
             
@@ -29,13 +29,12 @@
                 </p>
                 </p>    
             <h2 class="numeracao">Daniel Ferraz</h2>    
-                <p>Ele tem 17 anos, mora em Contagem, cursa Redes de Computadores no Cefet-Mg, gosta de jogar Valorant e varios outros jogos, ama ir à academia e foi o resposável na criação da Tela de Cadastro/Login. Também ajudou na estilização do site e contribuiu na busca de melhorias do mesmo.
-
-                </p>
+                <p>Ele tem 17 anos, mora em Contagem, cursa Redes de Computadores no Cefet-Mg, gosta de jogar Valorant e varios outros jogos, ama ir à academia e foi o resposável na criação da Tela de Cadastro/Login. Também ajudou na estilização do site e contribuiu na busca de melhorias do mesmo.</p>
                 </p>
 
                 <p>Aqui vos deixo as referências utilizadas para, com o site ;)</p> <a id="especial" href="referencias.html">Referências</a> 
     </main>            
+    <audio src="audio/peaceful-garden-healing-light-piano-for-meditation-zen-landscapes-112199.mp3" autoplay loop="0"></audio>
     <script src="easterEgg.js"></script>
 </body>
 
