--- a/telalogin.html
+++ b/telalogin.html
@@ -2,8 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="icon" href="img/Runa-Logo.png">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="styleslogin.css">
     <title>Login</title>
 </head>
@@ -18,6 +21,7 @@
             <div id="status"></div>
         </section>
     </div>
+    <audio src="audio/peaceful-garden-healing-light-piano-for-meditation-zen-landscapes-112199.mp3" autoplay loop="0"></audio>
     <script src="script.js"></script>
 </body>
 </html>
